# free-theorems

./: README.md  cabal.project
.github/workflows/: build.yml
abschlussvortrag/: abschlussvortrag.tex
free-theorems/: free-theorems.cabal
free-theorems-0.3.2.0/: free-theorems.cabal
free-theorems-0.3.2.0/src/Language/Haskell/: FreeTheorems.hs
free-theorems-0.3.2.0/src/Language/Haskell/FreeTheorems/: BasicSyntax.hs  Frontend.hs  Intermediate.hs  LanguageSubsets.hs  PrettyIntermediate.hs  PrettyTheorems.hs  PrettyTypes.hs  Syntax.hs  Theorems.hs  Unfold.hs
free-theorems-0.3.2.0/src/Language/Haskell/FreeTheorems/Frontend/: CheckGlobal.hs  CheckLocal.hs  Error.hs  TypeExpressions.hs
free-theorems-0.3.2.0/src/Language/Haskell/FreeTheorems/Parser/: Haskell98.hs  Hsx.hs
free-theorems-webui/: BeautifyTeXOutput.hs  RunLocalServer.hs  TypesetAsImage.hs  ui-tweaks.js
free-theorems-webui-0.2.1.1/: FTTools.hs  GeneratePDF.hs  LogRequests.hs  Main.hs  Pages.hs  TypesetAsImage.hs  lambdaTeX.tex  runLocalServer.py  style.css
free-theorems-webui-0.2.1.1/default_config/: Paths.hs
free-theorems-webui/default_config/: Paths.hs
free-theorems-webui/our_server_config/: Paths.hs
free-theorems/src/: ParserPrettyPrinterTests.hs  Runtests.hs
free-theorems/src/Language/Haskell/FreeTheorems/: BasicSyntax.hs  Frontend.hs  Intermediate.hs  LanguageSubsets.hs  NameStores.hs  PrettyIntermediate.hs  PrettyTheorems.hs  PrettyTypes.hs  Syntax.hs  Theorems.hs  Unfold.hs
free-theorems/src/Language/Haskell/FreeTheorems/Frontend/: CheckGlobal.hs  CheckLocal.hs  Error.hs  TypeExpressions.hs
free-theorems/src/Language/Haskell/FreeTheorems/Parser/: Haskell98.hs  Hsx.hs
free-theorems/src/Language/Haskell/FreeTheorems/Theorems/: Simplify.hs
proposal/: notizen.txt  presentation.tex
test-free-theorems/: KnownDeclarations.hs  example.txt  haskell-ast-from-code.txt  mehr-tests.hs  parse-valid-declaration.hs  test.hs
tex/: 1-einleitung.tex  2-grundlagen.tex  3-freie-theoreme.tex  4-free-theorems.tex  5-erweiterung-um-typklassen.tex  6-striktheit-und-rekursion.tex  7-zusammenfassung.tex  8-ausblick.tex  anhang.tex  ast.hs  ast.tex  ast2.hs  ast3.hs  ast4.hs  masterarbeit.bib  masterarbeit.tex  typevarapp.hs
