name:           free-theorems
version:        0.3.3.9
license:        PublicDomain
license-file:   LICENSE
author:         Sascha Boehme, Thomas Rossow
maintainer:     sad@informatik.uni-kiel.de
synopsis:       Automatic generation of free theorems.
description:
    The free-theorems library allows to automatically generate free
    theorems from Haskell type expressions. It supports nearly all
    Haskell 98 types except of type constructor classes, and in
    addition it can also handle higher-rank functions. Free theorems
    are generated for three different sublanguages of Haskell, a
    basic one corresponding to the polymorphic lambda-calculus of
    Girard-Reynolds, an extension of that allowing for recursion and
    errors, and finally a sublanguage additionally allowing seq.
    In the last two sublanguages, also inequational free theorems
    may be derived in addition to classical equational results.
category:       Language
tested-with:
  GHC ==8.6.5
   || ==8.8.4
   || ==8.10.7
   || ==9.0.2
   || ==9.2.4
   || ==9.4.2
   || ==9.6.6
   || ==9.8.4
   || ==9.10.1
   || ==9.12.1
cabal-version:  1.24.0
build-type:	Simple

extra-source-files:
    README

test-suite runtests
  default-language: Haskell98
  type: exitcode-stdio-1.0
  main-is: Runtests.hs
  hs-source-dirs: src
  build-depends:
      base
    , containers >= 0.1.0.1
    , haskell-src >= 1.0
    , haskell-src-exts >= 1.21 && < 1.24
    , mtl >= 2.2.1
    , pretty >= 1.0.0.0
    , syb >= 0.1.0.0
    , QuickCheck

  other-modules:
    Arbitraries
    FrontendCheckGlobalTests
    FrontendCheckLocalTests
    FrontendOtherTests
    FrontendTypeExpressionsTests
    InterpretationTests
    ParserPrettyPrinterTests
    Tests

library
  default-language: Haskell98
  build-depends:
      base >= 4.12 && < 5
    , containers >= 0.1.0.1
    , haskell-src >= 1.0
    , haskell-src-exts >= 1.21 && < 1.24
    , mtl >= 2.2.1
    , pretty >= 1.0.0.0
    , syb >= 0.1.0.0

  exposed-modules:
      Language.Haskell.FreeTheorems
      Language.Haskell.FreeTheorems.Syntax
      Language.Haskell.FreeTheorems.Parser.Haskell98
      Language.Haskell.FreeTheorems.Parser.Hsx
      Language.Haskell.FreeTheorems.Theorems
      Language.Haskell.FreeTheorems.BasicSyntax
      Language.Haskell.FreeTheorems.ValidSyntax
      Language.Haskell.FreeTheorems.NameStores

  other-modules:
      Language.Haskell.FreeTheorems.Frontend
      Language.Haskell.FreeTheorems.Frontend.Error
      Language.Haskell.FreeTheorems.Frontend.TypeExpressions
      Language.Haskell.FreeTheorems.Frontend.CheckLocal
      Language.Haskell.FreeTheorems.Frontend.CheckGlobal
      Language.Haskell.FreeTheorems.LanguageSubsets
      Language.Haskell.FreeTheorems.Intermediate
      Language.Haskell.FreeTheorems.Unfold
      Language.Haskell.FreeTheorems.PrettyBase
      Language.Haskell.FreeTheorems.PrettyTypes
      Language.Haskell.FreeTheorems.PrettyTheorems
      Language.Haskell.FreeTheorems.PrettyIntermediate
      Language.Haskell.FreeTheorems.Theorems.Simplify

  hs-source-dirs: src

  default-extensions:
    DeriveDataTypeable,
    Rank2Types,
    FlexibleInstances,
    UndecidableInstances
    ScopedTypeVariables
